# braid

./: .gitignore  Cargo.toml  README.md
docs/: bitcoin-mergedmining.md  braid.md  ergo-mergedmining.md
whitepaper/: compile.sh  sources.bib  whitepaper.tex  wp.tex
