[package]
name = "braid"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ergo_client = { git = "https://github.com/SethDusek/ergo_client.git" }
ergo-lib = { version = "0.28.0", features = [
    "compiler",
] }